<resources>
    <string name="app_name">Stolbygge</string>

    <string name="activity_ar_parts">Product List</string>
    <string name="title_activity_missing">Missing parts</string>
    <string name="title_activity_instructions">Instructions</string>

    <string name="action_settings">Settings</string>
    <string name="step">Step</string>
    <string name="next_step">Next step</string>
    <string name="show_step_animation">Play animation</string>
    <string name="show_step_animation_pause">Pause animation</string>
    <string name="assemble">Assemble</string>
    <string name="evaluate">Evaluate</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="rating_message">Thank you, beautiful!</string>
    <string name="rating_hint">Enter your thoughts here...</string>

</resources>
