<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:background="@color/transparent_gray">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:padding="40dp"
        android:gravity="center_horizontal"
        android:background="@color/transparent_black">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:text="@string/rating_message"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                android:layout_marginTop="7dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:progressBackgroundTint="@color/white"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/editText"
                android:textColor="@color/white"
                android:hint="@string/rating_hint"
                android:textColorHint="@color/white"
                android:layout_below="@+id/ratingBar"
                android:layout_alignLeft="@+id/ratingBar"
                android:layout_alignStart="@+id/ratingBar" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/cancel"
                android:textColor="@color/primary_dark_material_light"
                android:id="@+id/cancel_button"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/submit"
                android:textColor="@color/primary_dark_material_light"
                android:id="@+id/submit_button"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"/>

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
